--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,20 +1,21 @@
 name: Pull Request
 
 on: pull_request
+concurrency:
+  group: pr-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    name: Build (test)
     steps:
-      - uses: actions/checkout@master
-      - name: Use Node.js 15.x
+      - uses: actions/checkout@v2
+      - name: Setup node
         uses: actions/setup-node@v1
         with:
-          version: 15.x
+          version: 16
       - run: git config user.email "me@imbhargav5.com"
       - run: git config user.name "Bhargav Ponnapalli"
-      - name: Install now
-        run: now --version || npm i -g now
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -29,7 +30,32 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
         run: yarn
       - name: build
-        run: yarn build
+        run: yarn build      
+  test:
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    name: Test (yarn test)
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          version: 16
+      - run: git config user.email "me@imbhargav5.com"
+      - run: git config user.name "Bhargav Ponnapalli"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: |
+            node_modules
+            */*/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+      - name: Install project dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!      
       - name: test
         run: yarn test --coverage
       - name: Upload coverage to Codecov
