--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.0.0",
     "@docusaurus/core": "^2.0.0-alpha.75",
-    "@docusaurus/plugin-client-redirects": "2.0.0-alpha.75",
+    "@docusaurus/plugin-client-redirects": "2.0.0-beta.9",
     "@docusaurus/preset-classic": "^2.0.0-alpha.75",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
