ci(docs): build fail (#677)
* fix: docs and sidebar build fail

* fix: lint-staged command not found

* dependentbot: ignore pkg-dir

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,4 +9,5 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
-      
+    ignore:
+      - dependency-name: "pkg-dir"
