--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -381,6 +381,24 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "MichaelMakesGames",
+      "name": "Michael Moore",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5983927?v=4",
+      "profile": "https://michaelmakes.games/",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "trevorblades",
+      "name": "Trevor Blades",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1216917?v=4",
+      "profile": "https://trevorblades.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
