chore(docs): Update changelog and docs

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -399,6 +399,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "mrdulin",
+      "name": "official_dulin",
+      "avatar_url": "https://avatars.githubusercontent.com/u/17866683?v=4",
+      "profile": "https://github.com/mrdulin",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
