chore(docs): Update changelog and docs

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -408,6 +408,24 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "billymosis",
+      "name": "Billy Mosis Priambodo",
+      "avatar_url": "https://avatars.githubusercontent.com/u/57342180?v=4",
+      "profile": "https://github.com/billymosis",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "staff0rd",
+      "name": "Stafford Williams",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6289998?v=4",
+      "profile": "http://staffordwilliams.com/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
