build(jest): replace code transformer babel-jest with esbuild-jest, make the jest tests run faster (#811)
* feat: replace code transformer babel-jest with esbuild-jest, make the jest tests run faster

* fix: TS type error when run test with --coverage flag

--- a/package.json
+++ b/package.json
@@ -93,7 +93,6 @@
     "all-contributors-cli": "^6.20.0",
     "assert": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.3.1",
     "babel-loader": "8.2.3",
     "babel-plugin-prismjs": "2.1.0",
     "babel-preset-minify": "0.5.1",
@@ -105,6 +104,7 @@
     "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog": "3.3.0",
     "esbuild": "^0.14.0",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^7.24.0",
     "eslint-config-canonical": "^25.9.1",
     "eslint-config-prettier": "^8.2.0",
@@ -154,7 +154,6 @@
     "rollup-plugin-typescript2": "^0.31.0",
     "shelljs": "0.8.5",
     "terser": "^5.6.1",
-    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5",
