--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '16'
+          node-version: "16"
       - run: git config user.email "me@imbhargav5.com"
       - run: git config user.name "Bhargav Ponnapalli"
       - name: Get yarn cache directory path
@@ -30,7 +30,7 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
         run: yarn
       - name: build
-        run: yarn build      
+        run: yarn build
   test:
     timeout-minutes: 10
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '16'
+          node-version: "16"
       - run: git config user.email "me@imbhargav5.com"
       - run: git config user.name "Bhargav Ponnapalli"
       - name: Get yarn cache directory path
@@ -55,7 +55,7 @@ jobs:
             */*/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - name: Install project dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!      
+        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
         run: yarn
       - name: test
         run: yarn test --coverage
