--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@docusaurus/core": "2.0.0-beta.17",
     "@docusaurus/plugin-client-redirects": "2.0.0-beta.17",
     "@docusaurus/preset-classic": "2.0.0-beta.17",
+    "@docusaurus/theme-common": "^2.0.0-beta.17",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^18.1.0",
     "@rollup/plugin-json": "^4.1.0",
