chore(docs): Update changelog and docs

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -426,6 +426,24 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "superLipbalm",
+      "name": "Chanhee Kim",
+      "avatar_url": "https://avatars.githubusercontent.com/u/77329061?v=4",
+      "profile": "https://github.com/superLipbalm",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "hooriza",
+      "name": "Hooriza",
+      "avatar_url": "https://avatars.githubusercontent.com/u/507927?v=4",
+      "profile": "https://github.com/hooriza",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
