chore(docs): Update changelog and docs

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -453,6 +453,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "sszczep",
+      "name": "Sebastian Szczepański",
+      "avatar_url": "https://avatars.githubusercontent.com/u/21238816?v=4",
+      "profile": "https://github.com/sszczep",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
