--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -462,6 +462,24 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "pikaatic",
+      "name": "Mahendra Choudhary",
+      "avatar_url": "https://avatars.githubusercontent.com/u/31067376?v=4",
+      "profile": "http://pka.netlify.app/",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "ssmkhrj",
+      "name": "Som Shekhar Mukherjee",
+      "avatar_url": "https://avatars.githubusercontent.com/u/49264891?v=4",
+      "profile": "https://github.com/ssmkhrj",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
