--- a/.mergify.yml
+++ b/.mergify.yml
@@ -28,14 +28,26 @@ pull_request_rules:
       close:
         message: |
           This pull request looks stale. Feel free to reopen it if you think it is a mistake.
-  - name: merge Dependabot pull request
+  - name: merge Renovate pull request
     conditions:
-      - author=dependabot[bot]
+      - author=renovate[bot]
+      - label=dependency-update
+      - label!=major
     actions:
       review:
         type: APPROVE
-        message: Automatically approving Dependabot
+        message: Automatically approving Renovate
       queue:
         name: default
         method: rebase
         priority: low
+  - name: close Renovate pull request (conflict)
+    conditions:
+      - conflict
+      - author=renovate[bot]
+      - label=dependency-update
+    actions:
+      close:
+        message: |
+          This automated pull request has a conflict. Closing - Renovate will create a new PR.
+ 
