--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "no-cond-assign": [2],
     "no-dupe-keys": [1],
     "prefer-const": [1],
+    "promise/prefer-await-to-callbacks": 0,
     "no-const-assign": [2],
     "no-useless-constructor": [1],
     "no-class-assign": [2],
