chore(docs): Update changelog and docs

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -498,6 +498,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "brahambence",
+      "name": "brahambence",
+      "avatar_url": "https://avatars.githubusercontent.com/u/11694244?v=4",
+      "profile": "https://github.com/brahambence",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
