fix: cleanup types (#1151)
* fix: cleanup types

* test(types): cleanup types

--- a/.eslintrc
+++ b/.eslintrc
@@ -59,7 +59,7 @@
     "radix": 0,
     "func-style": 0,
     "canonical/destructuring-property-newline": 0,
-    "canonical/import-specifier-newline"
+    "canonical/import-specifier-newline": 0
   },
   "settings": {
     "react": {
