--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "rollup-plugin-typescript2": "^0.32.1",
     "shelljs": "0.8.5",
     "terser": "^5.14.1",
+    "ts-jest": "^28.0.7",
     "ts-node": "^9.1.1",
     "tslib": "^2.4.0",
     "typescript": "^4.3.5",
