--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "update-docusaurus-sidebars": "ts-node helpers/update-docusaurus-sidebars",
     "update-docs-and-sidebars": "yarn update-package-list-to-markdown && yarn update-docusaurus-sidebars",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
-    "build:esm": "tsc -m esNext --outDir dist/esm",
-    "build:cjs": "tsc -m commonjs --outDir dist/cjs",
+    "build:esm": "tsc -m esNext --outDir dist/esm && resolve-tspaths -o dist/esm",
+    "build:cjs": "tsc -m commonjs --outDir dist/cjs && resolve-tspaths -o dist/cjs",
     "build:umd": "rollup -c rollup.config.ts --configPlugin typescript",
     "build:types": "rollup -c dts.rollup.config.js",
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd && yarn build:types",
@@ -147,6 +147,7 @@
     "remark-frontmatter": "^4.0.1",
     "remark-preset-lint-markdown-style-guide": "^5.1.2",
     "remark-strip-badges": "^6.0.1",
+    "resolve-tspaths": "^0.7.1",
     "rollup": "^2.33.3",
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-esbuild": "^4.0.1",
