--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@babel/plugin-proposal-export-default-from": "7.17.12",
     "@babel/preset-env": "7.18.9",
     "@babel/preset-react": "7.18.6",
-    "@docusaurus/core": "2.0.0-beta.22",
+    "@docusaurus/core": "2.0.0-rc.1",
     "@docusaurus/plugin-client-redirects": "2.0.0-beta.22",
     "@docusaurus/preset-classic": "2.0.0-beta.22",
     "@docusaurus/theme-common": "^2.0.0-beta.22",
