--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@babel/preset-react": "7.18.6",
     "@docusaurus/core": "2.0.0-rc.1",
     "@docusaurus/plugin-client-redirects": "2.0.0-rc.1",
-    "@docusaurus/preset-classic": "2.0.0-beta.22",
+    "@docusaurus/preset-classic": "2.0.0-rc.1",
     "@docusaurus/theme-common": "^2.0.0-beta.22",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^18.1.0",
