fix(types): remove any types (#1152)
* fix(types): remove any types

* chore(jest.config.js): use tsconfig pathmappings

* fix(usefreshtick): update callback types

* chore(settings.json): update settings to include eslint fix on save

* fix(usedimensionsref): update warning logic

* fix(useundostate): update types

* fix(usenavigatorlanguage): fix types

* fix(usethrottle): fix types

* chore(see): add see links

* fix(usekey): update types

* fix(usekeyref): update types

* fix(usesessionstorage): update types

* fix(useselectablelist): update types

* fix(useraf): update types

* fix(usemultiselectablelist): fix types

* fix(usekeybindings): fix types

* fix(usefullscreen): tsignore usefullscreen for now

* test: update test cases

* fix(types): remove any ambigiuous types wip

* fix(usetoggle): update types and add generics

* fix(usethrottle spec): update types in test cases

* fix(usetimeoutwhen): test cases

update test cases

* fix(usesessionstorage): update types in test cases

* test(useraf): update test case

* test(usepreviousimmediate): update test cases

* test(usepreviousdifferent): fix ts errors in tests

* test(useprevious): fix ts errors in tests

* test(useoutsideclickref): fix ts errors in tests

* test(useoutsideclick): fix ts errors in test

* test(useonline): fix ts errors in tests

* test(usenavigatorlanguage): fix ts errors in tests

* test(usemutationobserver): fix ts errors

* test(uselocalstorage): fix tests

* test(usekey): update tests and fix ts errors

* test(useinterval tests): update tests and fix ts errors

* test(update test cases): update tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -59,7 +59,17 @@
     "radix": 0,
     "func-style": 0,
     "canonical/destructuring-property-newline": 0,
-    "canonical/import-specifier-newline": 0
+    "canonical/import-specifier-newline": 0,
+    "canonical/prefer-inline-type-import": 0,
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn", // or error
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ]
   },
   "settings": {
     "react": {
