fix: lint errors (#1179)
* chore(lint): fix eslint wip

* chore(lint and tsc): fixes

* fix(usemergerefs): fix types

* fix(usematchmedia): tsc and lint fixes

* chore(usemap): types

* chore(lint): fixes

* fix(deprecated): hooks removed

BREAKING CHANGE: useIntervalWhen, useLocalstorageState, usePreviousImmediate,
useSessionstorageState, useTimeoutWhen, useDidUpdate, useInViewRef hooks should be used instead.

* fix(index): remove unused

* fix(build): build fix

* fix(types): fixes

* fix(usefullscreen): ignore eslint errors for now

* fix(updates): update types and tests

* style(lint): fix lint errors

* chore(helpers): update helper scripts

* chore(cleanup): clean helpers

* chore(allcontributors): cleanup helpers

* test(generalssrtest): remove unnecessary tests

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: "16"
+          node-version: 18.7
       - run: git config user.email "me@imbhargav5.com"
       - run: git config user.name "Bhargav Ponnapalli"
       - name: Get yarn cache directory path
