--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "main": "index.js",
   "license": "MIT",
   "private": true,
@@ -8,7 +8,7 @@
     "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rooks": "*"
+    "rooks": "6.0.0-alpha.0"
   },
   "devDependencies": {
     "@mdx-js/loader": "^2.1.2",
@@ -18,7 +18,7 @@
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "next-transpile-modules": "9.0.0",
-    "rooks": "*",
+    "rooks": "6.0.0-alpha.0",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   },
