--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -58,9 +58,10 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^14.3.0",
     "@types/jest": "^27.5.2",
     "@types/lodash.debounce": "^4.0.6",
     "@types/raf": "^3.4.0",
@@ -92,6 +93,7 @@
     "husky": "^8.0.1",
     "inquirer": "8.2.4",
     "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
     "jest-localstorage-mock": "^2.4.21",
     "lodash.capitalize": "4.2.1",
     "lodash.sortby": "^4.7.0",
