feat: Add useAsyncEffect (#1146) (#1173)
* feat: Add useAsyncEffect (#1146)

* Write useAsyncEffect hook and test

* Add a new test for useAsyncEffect

* Docs

* Fix useAsyncEffect cleanup

* Add docs

* Test for error message

* fix: use async effect improvements

* chore(useasynceffect): add category

* docs(useasynceffect): add documentation

* feat(useasynceffect): add useasynceffect to rooks

* chore(changeset): add

* chore(build): remove unused imports

* chore(docs): useAsync docs reset

Co-authored-by: Antoni Kiszka <antoni@kiszka.ovh>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
   "eslint.workingDirectories": ["./"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "eslint.options": {
     "cache": true
   },
