chore: twist eslint setup and dependency specification (#1211)
* fix: parserOptions in child directory

* chore: use rooks from local packages

* Revert "chore: use rooks from local packages"

This reverts commit 3e6ca95860cbd51baa8b7322d8f875b7873b5cf6.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "eslint.workingDirectories": ["./"],
+  "eslint.workingDirectories": [
+    "./",
+    { "pattern": "./apps/*/" },
+    { "pattern": "./packages/*/" }
+  ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
