chore: resolve eslint error (#1214)
* fix: remove unused rules

* fix: template

* fix: avoid Function type by adding UnknownFunction type

* chore: remove unused eslint disable

* fix: lint for hasAssertions

* fix: use UnknownFunction to avoid any

* chore: remove unused eslint

* fix: useGeolocation lint error

* fix: remaining hasAssertions

* chore: specify tsconfig relative path

* chore: remove unused unicorn rules

* fix: reamining hasAssertions warning

--- a/template/index.spec.template
+++ b/template/index.spec.template
@@ -1,9 +1,10 @@
-import React from 'react'
-import { %name% } from '../hooks/%name%';
+import React from "react";
+import { %name% } from "../hooks/%name%";
 
 
 describe("%name%", () => {
   it("should be defined", () => {
+    expect.hasAssertions();
     expect(%name%).toBeDefined();
   });
 });
