--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^2.1.2",
     "@nextui-org/react": "^1.0.0-beta.9",
     "@stitches/react": "^1.2.8",
+    "gray-matter": "^4.0.3",
     "next": "^12.2.3",
     "next-mdx-remote": "^4.1.0",
     "prism-react-renderer": "^1.3.5",
