--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -5,12 +5,16 @@
   "license": "MIT",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.20.0",
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-testing-library": "^5.0.0"
+  },
+  "devDependencies": {
+    "tsconfig": "*"
   },
   "private": true
 }
