--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -128,6 +128,7 @@
     "terser": "^5.14.2",
     "ts-jest": "^28.0.7",
     "ts-node": "^9.1.1",
+    "tsconfig": "*",
     "tslib": "^2.4.0",
     "typescript": "^4.3.5",
     "unified": "^10.1.2",
