--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rooks",
-  "version": "6.2.1",
+  "version": "6.2.2-alpha.0",
   "description": "Essential React custom hooks ⚓ to super charge your components!",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
