--- a/template/index.spec.template
+++ b/template/index.spec.template
@@ -1,5 +1,5 @@
 import React from "react";
-import { %name% } from "../hooks/%name%";
+import { %name% } from "@/hooks/%name%";
 
 
 describe("%name%", () => {
