--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,12 +1,8 @@
-name: Node CI
+name: Node CI Pull request
 concurrency:
   group: release-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 on:
-  push:
-    branches:
-      - main
-      - next
   pull_request:
     branches:
       - "**"
