--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ yarn-error*
 *.d.ts
 .changelog
 dist
+tsconfig.tsbuildinfo
 src/declarations
 
 
@@ -37,3 +38,4 @@ i18n/*
 # turbo
 .turbo
 .vercel
+.rollup.cache
