Update Contributors List in Readme (#1358)
Co-authored-by: imbhargav5 <imbhargav5@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -606,6 +606,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "danilowoz",
+      "name": "Danilo Woznica",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4838076?v=4",
+      "profile": "https://github.com/danilowoz",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
