Update Contributors List in Readme (#1361)
Co-authored-by: imbhargav5 <imbhargav5@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -615,6 +615,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "dan-klasson",
+      "name": "dan-klasson",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1314838?v=4",
+      "profile": "https://github.com/dan-klasson",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
