--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -624,6 +624,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "belgattitude",
+      "name": "Sébastien Vanvelthem",
+      "avatar_url": "https://avatars.githubusercontent.com/u/259798?v=4",
+      "profile": "https://soluble.io/pro",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
