Changeset improvements (suggestion) (#1394)
* chore(changeset): generate github release changelog

* ci: add fetch-depth, update action

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.1.0/schema.json",
-  "changelog": "@changesets/cli/changelog",
+  "changelog": [
+    "@changesets/changelog-github",
+    { "repo": "imbhargav5/rooks" }
+  ],
   "commit": false,
   "fixed": [],
   "linked": [],
