--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -20,12 +20,16 @@ jobs:
           permission: "write"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: ⎔ CI Setup
         uses: ./.github/actions/ci-setup
+
       - name: test
         run: yarn run coverage
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
@@ -42,7 +46,13 @@ jobs:
       contains('refs/heads/main,refs/heads/alpha,refs/heads/next',github.ref) && github.event_name == 'push' }}
     steps:
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          # To run comparison we need more than the latest commit. Keep the fetch-depth relatively
+          # high or set it to zero to get all commits from the git repo.
+          # @link https://github.com/actions/checkout#fetch-all-history-for-all-tags-and-branches
+          fetch-depth: 0
+
       - name: ⎔ CI Setup
         uses: ./.github/actions/ci-setup
 
@@ -50,6 +60,7 @@ jobs:
         run: yarn run build
 
       - name: Create Release Pull Request or Publish to npm
+        id: changesets
         uses: changesets/action@v1
         with:
           publish: yarn run release
