Refactor bundling es2017 (#1408)
* feat: add export field for esm and cjs

* fix: remove babel warning about default

* chore(dev-dep): add rollup-plugin-typescript-path

* chore: add specific tsconfig build config

* chore: remove composite field (no project references)

* chore: prepare test for new rollup config

* chore(script): add build-future for new bundling

* feat: add umd build, fix esm export

* chore: add check dist for es2017

* refactor: replace old rollup by new one

* chore: add typecheck

* refactor: move to new build system

* chore(scripts): add typecheck

* chore: final dist directory

* chore: changesets and enable canary

* chore(dev-deps): remove unused deps

* chore(size-limit): improve track tree-shaked size

* chore(dev-deps): remove unused dep

* chore(size-limit): clarify intent

* chore: exit pre

* fix: update exports

* chore: enter pre alpha

* ci: add check:size to gh actions

* ci: add directory

* ci: reorder size limit action

* ci: typo fix

* ci: format action

* ci: update size limit action script

* ci: update size limit action script

* ci: update size limit action script

* ci: size limit script fix

* ci: comment out individual export sizecheck

Co-authored-by: Sébastien Vanvelthem <belgattitude@gmail.com>

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "build": "turbo run build --force -vvv",
+    "typecheck": "turbo run typecheck -vvv",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "clean": "turbo run clean && rm -rf node_modules",
