--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -7,6 +7,15 @@
   "unpkg": "dist/umd/rooks.umd.js",
   "types": "dist/types/index.d.ts",
   "typings": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "module": "./dist/esm/index.js",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "sideEffects": false,
   "license": "MIT",
   "devEngines": {
@@ -22,17 +31,17 @@
   },
   "bugs": "https://github.com/imbhargav5/rooks/issues",
   "scripts": {
-    "clean": "rimraf dist lib src/hooks/**.d.ts src/__tests__/**.d.ts",
+    "clean": "rimraf dist lib",
     "commit": "cz",
     "lint": "eslint src/**/*.ts",
     "format": "yarn run prettier --write \"./src/*.+(js|jsx|ts|tsx)\" && yarn run prettier --write \"./docs/*.+(md|mdxx)\"",
     "test": "jest",
+    "typecheck": "tsc -p ./tsconfig.json --noEmit",
+    "check:dist": "es-check",
+    "check:size": "size-limit --highlight-less",
     "coverage": "yarn test --coverage",
     "prebuild": "rimraf dist",
-    "build:esm": "tsc -m esNext --outDir dist/esm && resolve-tspaths -o dist/esm && rollup -c dts.rollup.config.js",
-    "build:cjs": "tsc -m commonjs --outDir dist/cjs && resolve-tspaths -o dist/cjs",
-    "build:umd": "rollup -c rollup.config.ts --configPlugin typescript",
-    "build": "yarn build:esm && yarn build:cjs && yarn build:umd"
+    "build": "yarn rollup -c rollup.config.ts"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
@@ -52,7 +61,9 @@
     "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.5.0",
+    "@size-limit/file": "^8.1.0",
+    "@size-limit/webpack": "^8.1.0",
+    "@size-limit/webpack-why": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^7.0.2",
@@ -77,6 +88,7 @@
     "clsx": "^1.2.1",
     "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "3.3.0",
+    "es-check": "^7.0.0",
     "es-main": "^1.2.0",
     "esbuild": "^0.15.7",
     "esbuild-jest": "^0.5.0",
@@ -116,15 +128,15 @@
     "remark-frontmatter": "^4.0.1",
     "remark-preset-lint-markdown-style-guide": "^5.1.2",
     "remark-strip-badges": "^6.0.1",
-    "resolve-tspaths": "^0.7.5",
     "rollup": "^2.79.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-esbuild": "^4.10.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript-paths": "^1.4.0",
     "rollup-plugin-typescript2": "^0.33.0",
     "shelljs": "0.8.5",
+    "size-limit": "^8.1.0",
     "terser": "^5.15.0",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
