--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,9 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
     },
+    "typecheck": {
+      "outputs": []
+    },
     "lint": {
       "outputs": []
     },
