--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,6 @@
 name: Node CI Pull request
 concurrency:
-  group: release-${{ github.event.pull_request.number || github.ref }}
+  group: pr-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 on:
   pull_request:
@@ -22,3 +22,13 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           directory: packages/rooks/src/coverage
+  size-limit:
+    timeout-minutes: 20
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/ci-setup
+      - uses: andresz1/size-limit-action@v1.7.0
+        with:
+          directory: "packages/rooks"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
