--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -633,6 +633,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "aso1datov",
+      "name": "Aleksandr Soldatov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/8918168?v=4",
+      "profile": "http://drk.me.uk/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
